css/standard.css
/* ... */
.tricks div div.card1 span.comment{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 5%;
  left:66.5%;
  right:17.5%;
  width:16%;
  text-align:center;
}

/* right player */
.tricks div div.card2 img,
.tricks div div.card2 .score,
.vorbehalt2{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 30%;
  right:37.5%;
  left:56.5%;
  height:40%;
  z-index:30;
}
.vorbehalt2{
  left:auto;
  right:38%;
  width:10%;
  text-align:right;
}
.tricks div div.card2 span.comment{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 85%;
  left:66.5%;
  right:17.5%;
  width:16%;
  text-align:center;
}

/* bottom player */
.tricks div div.card3 img,
.tricks div div.card3 .score,
.vorbehalt3{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  bottom: 0%;
  left:47%;
  right:47%;
  height: 40%;
  z-index:30;
}
.tricks div div.card3 .score, .vorbehalt3{
  left:45%;
  right:45%;
  width:10%;
  height: 3em;
  text-align:center;
}
.tricks div div.card3 span.comment{
  position:absolute;
  margin:0;
  padding:0;
  /*border: 1px solid red;*/
  top: 85%;
  right:66.5%;
  left:17.5%;
  width:16%;
}

span.comment{
 border: 3px solid green;
 max-height:6em;
 overflow: auto;
 word-wrap: break-word;
}

.tricks div div span.comment span{
  display:block;
  text-align:left;
  border-top:1px solid green;
}

.mycards {
  margin:0;
  padding:0;
  border-top:       2px solid gray;
/* border-bottom:    2px solid green;*/
  background-color: #faffc7;
  text-align:center;
}

.mycards img { height:6em;}

.exchange {
  clear:both;
  margin:0;
  padding:0;
  border:1px solid red;
  background-color:yellow;
}

.exchange img { height:6em;}

.line{
  clear:both;
  border-top:2px solid gray;
  margin:0;
  padding:0;
}

.gameinfo {
  position:relative;
  top:0em;
  margin:0em;
  padding:0em;
  width:100%;
  border-top:    2px solid gray;
  background-color: #efaaaa;
  text-align:center;
}

.usermenu {
  text-align: center;
  padding:0.7em;
  border-bottom: 1px solid black;
}

.notes {
  position:absolute;
  top:3em;
  left:0;
  margin:1em;
  margin-top:0em;
  margin-left:2em;

  width: 12em;

  border:  2px solid gray;

  padding:0.3em;

  background-color: #efefef;

  height:10em;
  overflow: auto;
  z-index:50;
}

.user {
    margin-left:25%;
    margin-right:5%;
}

div.user ul {
  list-style:none;
  padding: 0px;
}

div.user ul li {
  position: relative;
  padding:3px;
  margin: 0px;
  width: 80%;
  min-height: 1.2em;
  border-left: 2px solid #babdb6 ;
  border-right: 2px solid #babdb6 ;
  border-bottom: 2px solid #babdb6 ;
}

div.user ul li:first-child {
  border-top: 2px solid #babdb6 ;
}
.gamessession {
    display:none;
}

.user .gameid {
    float: left;
    width: 5em;
}
.user .turn {
    padding-left: 1em;
    width: 20em;
}

.user .gameshidesession {
  display: none;
}

.user .gameshidesession , .user .gamesshowsession {
    float:right;
    width: 10em;
}

.wide { margin-left:5%;margin-right:5%; }

.over {
  text-align:center;
  margin-bottom:0.1em;
}

.cardinput {
  display:inline;
  position:relative;
  border: 1px solid #000;
}
.cardinput img { width: 4em;}
.cardinput:hover{ background-color:red;}

.gamestatuspre {
  padding: 0 0.3em;
  background-color: #f57900;
}
.gamestatusover {
  padding:0 0.3em;
  background-color: #e9b96e ;
  color: #fff;
}
.gamestatusplay {
  padding:0 0.3em;
  background-color: #8ae234;
}

.bigger{ font-size:larger;}


/* statistics using jquery*/
caption {
  text-align: center;
  margin: 0.5em;
  padding: 0.5em;
  padding-bottom: 0em;
  margin-bottom: 0;
 }

table.stats {
  margin: 0.5em 1em;
  border: solid 0.2em #aeaeae;
  -moz-border-radius: 0.5em ;
  float: left;
}
table.stats tbody tr.odd td  { background-color:#aeaeae; }
table.stats tbody tr.even td { background-color:#eaeaea; }
table.stats td, table.stats th {
  margin-left:  0.2em;
  margin-right: 0.2em;
  padding-left:  0.2em;
  padding-right: 0.2em;
  border-right: solid 0.1em #000;
}
table.stats tr td:last-child, table.stats  tr th:last-child { border-right: solid 0 #000; }
table.stats th { border-bottom: solid 0.2em #000 }

table.stats thead tr .header {
    background-image: url(bg.png);
    background-repeat: no-repeat;
    background-position: center right;
    cursor: pointer;
}
table.stats tbody td {
    padding: 4px;
    background-color: #eaeaea;
    vertical-align: top;
}
table.stats thead tr .headerSortUp {
    background-image: url(asc.png);
}
table.stats thead tr .headerSortDown {
    background-image: url(desc.png);
}
table.stats thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
    background-color: #8dbdd8;
}



/* the login window */
.login {
  text-align:center;
  padding-top: 1em;
}

.login p {
  padding: 0.1em 0.1em 0.15em;
}
.login h4 {
  padding: 0.3em 0.3em 0.45em;
}

/* the login/register form */
ul.loginregister {
  width: 24em;
  margin: 0.25em auto;
  margin-top: 1.0em;
  padding: 0.0em;
  padding-top:0.5em;
  text-align: right;
  z-index: 1;
 }

ul.loginregister li {
  display:inline;
  border: 0px;
  border-top: 2px solid #000;
  border-left: 2px solid #000;
  padding: 0.5em 0.75em;
  padding-bottom: 0.25em;
  background-color: #eee;
}

ul.loginregister li:last-child { border-right: 2px solid #000;}
ul.loginregister li:hover {background-color: #aaa; }

.doregister {display: none;}
.dologin label,.doregister label {float:left; width: 6em; }


.login fieldset{
  width: 24em;
  margin: 0.0em auto;
  margin-bottom: 0.5em;
  padding: 0.5em 0.5em  1.5em;
  text-align: center;
}

fieldset {
  border: 2px solid #000;
  padding: 0.5em 0.5em 0.75em;
  background-color: #eee;
}

fieldset p {
  font-size:smaller;
}

.login label, .login input{ margin: 0.5em 0.5em 0.75em;}

.login label{
  float:left;
  width:7em;
  text-align: left;
}

.login input #email, .login input #password{
  width:9em;
  float:right;
}

.login .submitbutton { background-color: #fff;}
/* ... */

